--- a/client/calabarzon/package.json
+++ b/client/calabarzon/package.json
@@ -24,6 +24,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-toastify": "^5.4.1",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-labels": "^1.1.0",
+    "react-chartjs-2": "^2.8.0",
     "yup": "^0.28.1"
   },
   "scripts": {
