--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
+    "sqlite3": "^4.1.1",
     "uuid": "^3.4.0"
   }
 }
